--- a/src/dna-setup/zome-template/Cargo.toml
+++ b/src/dna-setup/zome-template/Cargo.toml
@@ -7,14 +7,11 @@ edition = "2018"
 serde = "1.0"
 serde_json = { version = "1.0", features = ["preserve_order"] }
 serde_derive = "1.0"
-# hdk = "=0.0.48-alpha1"
-hdk = { git = 'https://github.com/holochain/holochain-rust', branch = 'future-dep-fix' }
-# hdk_proc_macros = "=0.0.48-alpha1"
-hdk_proc_macros = { git = 'https://github.com/holochain/holochain-rust', branch = 'future-dep-fix' }
-# holochain_wasm_utils = "=0.0.48-alpha1"
-holochain_wasm_utils = { git = 'https://github.com/holochain/holochain-rust', branch = 'future-dep-fix' }
+hdk = "=0.0.49-alpha1"
+hdk_proc_macros = "=0.0.49-alpha1"
+holochain_wasm_utils = "=0.0.49-alpha1"
 holochain_json_derive = "=0.0.23"
-holochain_anchors = { git = "https://github.com/JettTech/holochain-anchors",  branch = "2020-05-11/hc-hdk-future-dep-fix" }
+holochain_anchors = { git = "https://github.com/JettTech/holochain-anchors",  branch = "2020-05-28/bump-hdk-crate-version" }
 
 [lib]
 path = "src/lib.rs"
